More fixes, hopefully including spinner on mobile

--- a/FourMagicNumberGame/Components/Game.razor.css
+++ b/FourMagicNumberGame/Components/Game.razor.css
@@ -1,3 +1,7 @@
 ﻿.number-as-words {
     margin: 10px;
 }
+
+input[type=number]::-webkit-inner-spin-button {
+    opacity: 1;
+}
